# Holberton_web_ios

./: README.md
project/rust_shared_memory/: Cargo.toml  build.rs
project/rust_shared_memory/src/: main.rs
project/rust_shared_memory/src/variable_sets/: mod.rs
project/rust_shared_memory/src/websocket/: mod.rs
web-ios/: package.json
web-ios/web-ios/: README.md  package-lock.json
web-ios/web-ios/src/: App.css  App.js  DataContext.js  WebSocket.js
web-ios/web-ios/src/components/Footer/: Footer.css  Footer.js
web-ios/web-ios/src/components/Pages/: Page.js
web-ios/web-ios/src/components/Pages/Fuel/: Fuel.css  FuelPage.js  ProgressBar.js
web-ios/web-ios/src/components/Pages/Malfunctions/: Malfunctions.css  Malfunctions.js  MalfunctionsPage.js
web-ios/web-ios/src/components/Pages/Map/: Coordinates.js  Graph.js  Map.css  MapPage.js
web-ios/web-ios/src/components/Pages/MasterIndex/: IOSstatus.js  MalfList.js  MasterIndex.css  MasterIndexPage.js  Radio.js  fuelbar.js
web-ios/web-ios/src/components/SideNavBar/: NavTab.js  SideNavBar.css  SideNavBar.js
web-ios/web-ios/src/components/TopBar/: Informer.js  Informers.js  TopBar.js  toggle.js  topbar.css
