[package]
name = "rust_shared_memory"
version = "0.1.0"
edition = "2018"

[dependencies]
libc = "0.2"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.27.0", features = ["full"] }
warp = "0.3.4"
futures-util = "0.3"
tokio-stream = "0.1"
lazy_static = "1.4"
rusqlite = "0.25.3"
phf = { version = "0.9", features = ["macros"] }
phf_codegen = "0.8"

[build-dependencies]
rusqlite = "0.25.3"
